# market-watch-assistant

./: .dockerignore  .env.example  .env.local.example  .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-build  docker-build-push-prod  docker-compose.yml  run-server.sh  run-ui.sh  run-worker.sh
api-server/: .env.example  pyproject.toml  settings.yml
api-server/app/: __init__.py  config.py  main.py  models.py  schemas.py
api-server/tests/: test_api_contract.py
market-watch-bot/: .env.example  .env.test  README.md  pyproject.toml  settings.yml  starter-sources.yml  starter-watchlist.yml
market-watch-bot/alembic/: env.py
market-watch-bot/bot_worker/: __init__.py  catalysts.py  cli.py  config.py  crawler.py  digest.py  embeddings.py  events.py  investigation.py  llm.py  logging.py  market_data.py  normalize.py  retention.py  rss.py  scoring.py  services.py  watchlist.py
market-watch-bot/common/: article_fallbacks.py  article_text.py  bot_commands.py  config.py  crawler.py  external_providers.py  llm.py  logging.py  market.py  market_symbol_resolver.py  normalize.py  rss.py  source_parsing.py  source_policies.py  source_preview.py
market-watch-bot/tests/: test_alert_decisions.py  test_alert_delivery.py  test_alert_policy_settings.py  test_api_architecture.py  test_api_contract.py  test_bot_commands.py  test_candidate_ticker_derivation.py  test_catalysts.py  test_cli.py  test_config.py  test_crawler.py  test_embedding_cluster_attachment.py  test_embeddings.py  test_events.py  test_extraction_audit.py  test_investigation.py  test_llm.py  test_llm_services.py  test_logging.py  test_market_data.py  test_market_symbol_resolver.py  test_migration_0008.py  test_migration_0009.py  test_migration_0010.py  test_normalization.py  test_operations.py  test_phase2_pipeline_helpers.py  test_pipeline_intelligence.py  test_real_database.py  test_real_database_helpers.py  test_retention.py  test_rss.py  test_scoring.py  (+6 more)
(+248 files in other folders)
