[project]
name = "market-watch-api-server"
version = "0.1.0"
description = "FastAPI control and data access layer for market-watch-assistant"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "sqlalchemy[asyncio]>=2.0.30",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
